--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!axios).+\\.js$\"",
-		"serve": "serve -s build",
-		"analyze": "node scripts/analyze.js"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"typecheck": "tsc --noEmit",
+		"lint": "npm run eslint && npm run stylelint",
+		"eslint": "eslint . --cache",
+		"stylelint": "stylelint '**/*.css' --cache",
+		"prettier": "prettier --check \"**/*.{ts,tsx}\"",
+		"prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+		"vitest": "vitest run",
+		"vitest:watch": "vitest",
+		"test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build",
+		"storybook": "storybook dev -p 6006",
+		"storybook:build": "storybook build"
 	},
 	"browserslist": {
 		"production": [
@@ -23,68 +32,57 @@
 		]
 	},
 	"dependencies": {
-		"@chakra-ui/react": "2.8.2",
-		"@emotion/react": "11.11.1",
-		"@emotion/styled": "11.11.0",
+		"@mantine/core": "8.1.2",
+		"@mantine/hooks": "8.1.2",
 		"axios": "1.7.9",
 		"classnames": "2.5.1",
 		"focus-visible": "5.2.1",
-		"framer-motion": "10.16.5",
 		"fuse.js": "7.0.0",
 		"localforage": "1.10.0",
-		"react": "18.2.0",
-		"react-app-polyfill": "3.0.0",
-		"react-device-detect": "2.2.3",
-		"react-dom": "18.2.0",
-		"react-helmet": "6.1.0",
-		"react-icons": "4.4.0",
-		"react-intersection-observer": "9.3.5",
-		"react-junctions": "0.5.0",
-		"react-loader-spinner": "5.1.5",
-		"react-recipes": "1.5.0",
-		"react-router-dom": "6.19.0",
-		"react-scripts": "5.0.1",
-		"react-virtualized-auto-sizer": "1.0.20",
-		"react-window": "1.8.9",
-		"sass": "1.69.5",
-		"use-debounce": "10.0.0"
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-icons": "5.5.0",
+		"react-intersection-observer": "9.16.0",
+		"react-router-dom": "^7.6.3",
+		"react-virtualized-auto-sizer": "1.0.26",
+		"react-window": "1.8.11",
+		"sass": "1.89.2",
+		"use-debounce": "10.0.5"
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "7.21.11",
-		"@eslint/js": "9.18.0",
-		"@testing-library/jest-dom": "5.16.4",
-		"@testing-library/react": "13.3.0",
-		"@testing-library/user-event": "14.5.1",
-		"@tsconfig/recommended": "1.0.3",
-		"@types/jest": "28.1.6",
-		"@types/node": "20.9.2",
-		"@types/react": "18.2.37",
-		"@types/react-dom": "18.2.15",
-		"@types/react-helmet": "6.1.9",
-		"@types/react-router-dom": "5.3.3",
-		"@types/react-virtualized-auto-sizer": "1.0.3",
-		"@types/react-window": "1.8.8",
-		"@typescript-eslint/eslint-plugin": "8.19.1",
-		"@typescript-eslint/parser": "8.19.1",
-		"eslint": "9.18.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import": "2.31.0",
-		"eslint-plugin-jest": "28.10.0",
-		"eslint-plugin-jsx-a11y": "6.10.2",
-		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-react": "7.37.3",
-		"eslint-plugin-react-hooks": "5.1.0",
-		"eslint-plugin-testing-library": "7.1.1",
-		"globals": "15.14.0",
-		"jest": "29.7.0",
-		"jest-environment-jsdom": "29.7.0",
-		"jest-watch-typeahead": "2.2.2",
-		"prettier": "3.4.2",
-		"progress-bar-webpack-plugin": "2.1.0",
-		"react-snap": "1.23.0",
-		"typescript": "5.7.3",
-		"typescript-eslint": "8.19.1",
-		"webpack-bundle-analyzer": "4.10.2"
+		"@eslint/js": "^9.29.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+		"@storybook/react": "^8.6.12",
+		"@storybook/react-vite": "^8.6.12",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/node": "^22.15.11",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"@vitejs/plugin-react": "^4.5.2",
+		"eslint": "^9.29.0",
+		"eslint-config-mantine": "^4.0.3",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.5",
+		"identity-obj-proxy": "^3.0.0",
+		"jsdom": "^26.1.0",
+		"postcss": "^8.5.5",
+		"postcss-preset-mantine": "1.17.0",
+		"postcss-simple-vars": "^7.0.1",
+		"prettier": "^3.5.3",
+		"prop-types": "^15.8.1",
+		"sass-embedded": "^1.89.2",
+		"storybook": "^8.6.12",
+		"storybook-dark-mode": "^4.0.2",
+		"stylelint": "^16.20.0",
+		"stylelint-config-standard-scss": "^15.0.1",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.34.0",
+		"vite": "^6.3.5",
+		"vite-tsconfig-paths": "^5.1.4",
+		"vitest": "^3.2.3"
 	},
 	"jest": {
 		"clearMocks": false
