--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
 		]
 	},
 	"dependencies": {
-		"@mantine/core": "8.1.2",
-		"@mantine/hooks": "8.1.2",
+		"@mantine/core": "8.3.1",
+		"@mantine/hooks": "8.3.1",
+		"@mantine/modals": "8.3.1",
+		"@mantine/notifications": "8.3.1",
+		"@tabler/icons-react": "^3.12.0",
 		"@types/react-window": "^1.8.8",
 		"axios": "1.7.9",
 		"classnames": "2.5.1",
@@ -42,9 +45,10 @@
 		"localforage": "1.10.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-helmet": "^6.1.0",
 		"react-icons": "5.5.0",
 		"react-intersection-observer": "9.16.0",
-		"react-router-dom": "^7.6.3",
+		"react-router": "^7.9.1",
 		"react-virtualized-auto-sizer": "1.0.26",
 		"react-window": "1.8.11",
 		"sass": "1.89.2",
@@ -52,38 +56,40 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-		"@storybook/react": "^8.6.12",
-		"@storybook/react-vite": "^8.6.12",
+		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+		"@storybook/react": "^9.1.5",
+		"@storybook/react-vite": "^9.1.5",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^30.0.0",
 		"@types/node": "^22.15.11",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
+		"@types/react-helmet": "^6.1.11",
 		"@vitejs/plugin-react": "^4.5.2",
 		"eslint": "^9.29.0",
 		"eslint-config-mantine": "^4.0.3",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.5",
 		"identity-obj-proxy": "^3.0.0",
-		"jsdom": "^26.1.0",
-		"postcss": "^8.5.5",
-		"postcss-preset-mantine": "1.17.0",
+		"jsdom": "^27.0.0",
+		"postcss": "^8.5.6",
+		"postcss-preset-mantine": "1.18.0",
 		"postcss-simple-vars": "^7.0.1",
-		"prettier": "^3.5.3",
+		"prettier": "^3.6.2",
 		"prop-types": "^15.8.1",
-		"sass-embedded": "^1.89.2",
-		"storybook": "^8.6.12",
+		"sass-embedded": "^1.92.1",
+		"storybook": "^9.1.5",
 		"storybook-dark-mode": "^4.0.2",
-		"stylelint": "^16.20.0",
-		"stylelint-config-standard-scss": "^15.0.1",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.0",
-		"vite": "^6.3.5",
+		"stylelint": "^16.24.0",
+		"stylelint-config-standard-scss": "^16.0.0",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.43.0",
+		"vite": "^7.1.5",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.2.3"
+		"vitest": "^3.2.4"
 	},
 	"jest": {
 		"clearMocks": false
