--- a/package.json
+++ b/package.json
@@ -32,25 +32,24 @@
 		]
 	},
 	"dependencies": {
+		"@dr.pogodin/react-helmet": "^3.0.4",
 		"@mantine/core": "8.3.1",
 		"@mantine/hooks": "8.3.1",
 		"@mantine/modals": "8.3.1",
 		"@mantine/notifications": "8.3.1",
 		"@tabler/icons-react": "^3.12.0",
 		"@types/react-window": "^1.8.8",
-		"axios": "1.7.9",
+		"axios": "1.12.1",
 		"classnames": "2.5.1",
 		"focus-visible": "5.2.1",
-		"fuse.js": "7.0.0",
+		"fuse.js": "7.1.0",
 		"localforage": "1.10.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-helmet": "^6.1.0",
 		"react-icons": "5.5.0",
 		"react-intersection-observer": "9.16.0",
 		"react-router": "^7.9.1",
-		"react-virtualized-auto-sizer": "1.0.26",
-		"react-window": "1.8.11",
+		"react-window": "2.1.0",
 		"sass": "1.89.2",
 		"use-debounce": "10.0.5"
 	},
