--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,10 @@
 {
   "short_name": "Hymnal",
   "name": "Hymns for all Times",
-  "description": "A Hymnal Web App with offline support",
+  "description": "A Hymnal Web App with offline support for worship and spiritual songs",
+  "categories": ["music", "lifestyle", "productivity"],
+  "lang": "en",
+  "dir": "ltr",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,22 +14,27 @@
     {
       "src": "launcher-144.png",
       "sizes": "144x144",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "launcher-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "launcher-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "orientation": "portrait-primary",
-  "start_url": ".",
-  "display": "minimal-ui",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
   "theme_color": "#1890ff",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "prefer_related_applications": false
 }
