--- a/package.json
+++ b/package.json
@@ -1,89 +1,95 @@
 {
-	"name": "hymnal",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!axios).+\\.js$\"",
-		"serve": "serve -s build",
-		"analyze": "node scripts/analyze.js"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"safari 11",
-			"ios_saf 11"
-		]
-	},
-	"dependencies": {
-		"@chakra-ui/react": "2.8.2",
-		"@emotion/react": "11.11.1",
-		"@emotion/styled": "11.11.0",
-		"axios": "1.6.2",
-		"classnames": "2.3.2",
-		"focus-visible": "5.2.0",
-		"framer-motion": "10.16.5",
-		"fuse.js": "7.0.0",
-		"localforage": "1.10.0",
-		"react": "18.2.0",
-		"react-app-polyfill": "3.0.0",
-		"react-device-detect": "2.2.3",
-		"react-dom": "18.2.0",
-		"react-helmet": "6.1.0",
-		"react-icons": "4.4.0",
-		"react-intersection-observer": "9.3.5",
-		"react-junctions": "0.5.0",
-		"react-loader-spinner": "5.1.5",
-		"react-recipes": "1.5.0",
-		"react-router-dom": "6.19.0",
-		"react-scripts": "5.0.1",
-		"react-virtualized-auto-sizer": "1.0.20",
-		"react-window": "1.8.9",
-		"sass": "1.69.5",
-		"use-debounce": "10.0.0"
-	},
-	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "7.21.11",
-		"@testing-library/jest-dom": "5.16.4",
-		"@testing-library/react": "13.3.0",
-		"@testing-library/user-event": "14.5.1",
-		"@tsconfig/recommended": "1.0.3",
-		"@types/jest": "28.1.6",
-		"@types/node": "20.9.2",
-		"@types/react": "18.2.37",
-		"@types/react-dom": "18.2.15",
-		"@types/react-helmet": "6.1.9",
-		"@types/react-router-dom": "5.3.3",
-		"@types/react-virtualized-auto-sizer": "1.0.3",
-		"@types/react-window": "1.8.8",
-		"@typescript-eslint/eslint-plugin": "6.11.0",
-		"@typescript-eslint/parser": "6.11.0",
-		"eslint": "8.54.0",
-		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-airbnb-typescript": "17.1.0",
-		"eslint-config-prettier": "9.0.0",
-		"eslint-plugin-import": "2.29.0",
-		"eslint-plugin-jsx-a11y": "6.8.0",
-		"eslint-plugin-react": "7.33.2",
-		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-testing-library": "6.1.2",
-		"jest": "^29.7.0",
-		"jest-environment-jsdom": "29.7.0",
-		"jest-watch-typeahead": "^2.2.2",
-		"prettier": "3.1.0",
-		"progress-bar-webpack-plugin": "2.1.0",
-		"react-snap": "1.23.0",
-		"typescript": "5.2.2",
-		"webpack-bundle-analyzer": "4.5.0"
-	},
-	"jest": {
-		"clearMocks": false
-	}
+  "name": "hymnal",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "lint": "npm run eslint && npm run stylelint",
+    "eslint": "eslint . --cache",
+    "stylelint": "stylelint '**/*.css' --cache",
+    "prettier": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "vitest": "vitest run",
+    "vitest:watch": "vitest",
+    "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "safari 11",
+      "ios_saf 11"
+    ]
+  },
+  "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
+    "@mantine/core": "8.3.1",
+    "@mantine/hooks": "8.3.1",
+    "@mantine/modals": "8.3.1",
+    "@mantine/notifications": "8.3.1",
+    "@tabler/icons-react": "^3.12.0",
+    "@types/react-window": "^1.8.8",
+    "classnames": "2.5.1",
+    "focus-visible": "5.2.1",
+    "fuse.js": "7.1.0",
+    "localforage": "1.10.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "5.5.0",
+    "react-intersection-observer": "9.16.0",
+    "react-router": "^7.9.1",
+    "react-window": "2.1.0",
+    "sass": "1.89.2",
+    "use-debounce": "10.0.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@storybook/react": "^9.1.5",
+    "@storybook/react-vite": "^9.1.5",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.15.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/react-helmet": "^6.1.11",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
+    "eslint-config-mantine": "^4.0.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^27.0.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "1.18.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.6.2",
+    "prop-types": "^15.8.1",
+    "sass-embedded": "^1.92.1",
+    "storybook": "^9.1.5",
+    "storybook-dark-mode": "^4.0.2",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
+  },
+  "jest": {
+    "clearMocks": false
+  }
 }
