--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-react": "^7.37.5",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^27.0.0",
+    "playwright": "^1.55.1",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "^7.0.1",
